# all-done-app

./: .gitignore  README.md  app.py  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: app.py  config.py  generate_secret_key.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  error_handlers.py  models.py  routes.py  utils.py
backend/app/templates/: index.html
backend/templates/: index.html
backend/tests/: conftest.py  test_app.py  test_auth.py
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  setupTests.js
frontend/src/components/: CreateTaskForm.js  Login.js  Task.js  TaskList.js
frontend/src/components/Login/: Login.css  Login.js
frontend/src/components/Login/tests/: Login.test.js
frontend/src/components/Tasks/: AddTaskModal.css  AddTaskModal.js  EditTaskModal.css  EditTaskModal.js  TaskItem.css  TaskItem.js  TaskModal.css  TaskRow.js  TaskTable.js  Tasks.css  Tasks.js  Tasks.test.js
frontend/src/components/Tasks/__tests__/: Tasks.test.js
frontend/src/components/Tasks/tests/: AddTaskModal.test.js  EditTaskModal.test.js  TaskItem.test.js  Tasks.test.js
static/css/: style.css
templates/: index.html
