[tool.poetry]
name = "all-done-backend"
version = "0.1.0"
description = "Backend for the All Done App"
authors = [{name = "Mohammed Hussain", email = "mohammed.hussain@ada.ac.uk"}]
dependencies = [
    "flask",
    "pytest",
    "coverage",
    "flake8"
]
[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
