[tool.poetry]
name = "all-done-backend"
version = "0.1.0"
description = "Backend for the All Done App"
authors = ["Mohammed Hussain <mohammed.hussain@ada.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
pytest = "^8.2.0"
coverage = "^7.5.0"
flake8 = "^7.1.0"
flask_cors = "^3.0.10"
flask-jwt-extended = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
